[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/scripts/Gui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Gui/Themes/MenusTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRight.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowLeftPressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowLeftDisabled.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowLeftHover.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightHover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightPressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightDisabled.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/musicOn.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.827451, 0.65098, 0.364706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.823529, 0.686275, 0.364706, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.823529, 0.686275, 0.364706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.87451, 0.752941, 0.431373, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.513726, 0.513726, 0.513726, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.407843, 0.407843, 0.407843, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.8, 0.619608, 0.333333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.619608, 0.333333, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainMenuVBox" type="VBoxContainer" parent="MainMenuControl"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuHBox" type="HBoxContainer" parent="MainMenuControl/MainMenuVBox"]
margin_right = 600.0
margin_bottom = 878.0
alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox"]
margin_left = 36.0
margin_right = 563.0
margin_bottom = 878.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_right = 527.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 113 )

[node name="Title" type="Label" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 117.0
margin_right = 527.0
margin_bottom = 206.0
text = "Korban Shop"

[node name="MarginContainer4" type="MarginContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 210.0
margin_right = 527.0
margin_bottom = 343.0
rect_min_size = Vector2( 0, 133 )

[node name="StartGameButton" type="Button" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 347.0
margin_right = 527.0
margin_bottom = 424.0
focus_mode = 0
text = "Start Game"

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 428.0
margin_right = 527.0
margin_bottom = 494.0
rect_min_size = Vector2( 0, 66 )

[node name="OptinsButton" type="Button" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 498.0
margin_right = 527.0
margin_bottom = 575.0
focus_mode = 0
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 579.0
margin_right = 527.0
margin_bottom = 645.0
rect_min_size = Vector2( 0, 66 )

[node name="CreditsButton" type="Button" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 649.0
margin_right = 527.0
margin_bottom = 726.0
text = "Credits"

[node name="MarginContainer5" type="MarginContainer" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 730.0
margin_right = 527.0
margin_bottom = 797.0
rect_min_size = Vector2( 0, 67 )

[node name="Exit Game" type="Button" parent="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu"]
margin_top = 801.0
margin_right = 527.0
margin_bottom = 878.0
focus_mode = 0
text = "Exit Game"

[node name="StartGameMenuVBox" type="VBoxContainer" parent="MainMenuControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/StartGameMenuVBox"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="SelectLevelLabel" type="Label" parent="MainMenuControl/StartGameMenuVBox"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 143.0
text = "Select Level"
align = 1

[node name="StartGameMenuHBox" type="HBoxContainer" parent="MainMenuControl/StartGameMenuVBox"]
margin_top = 147.0
margin_right = 600.0
margin_bottom = 901.0
alignment = 1

[node name="StartGameMenu" type="VBoxContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox"]
margin_left = 157.0
margin_right = 442.0
margin_bottom = 754.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_right = 285.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="LevelSelectionButton" type="Button" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 24.0
margin_right = 285.0
margin_bottom = 107.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 1"

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 111.0
margin_right = 285.0
margin_bottom = 224.333
rect_min_size = Vector2( 0, 113.333 )

[node name="LevelSelectionButton2" type="Button" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 228.0
margin_right = 285.0
margin_bottom = 311.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 1"

[node name="MarginContainer3" type="MarginContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 315.0
margin_right = 285.0
margin_bottom = 428.333
rect_min_size = Vector2( 0, 113.333 )

[node name="LevelSelectionButton3" type="Button" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 432.0
margin_right = 285.0
margin_bottom = 515.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 1"

[node name="MarginContainer4" type="MarginContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 519.0
margin_right = 285.0
margin_bottom = 569.0
rect_min_size = Vector2( 0, 50 )

[node name="ArrowButtonsHBox" type="HBoxContainer" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 573.0
margin_right = 285.0
margin_bottom = 673.0
alignment = 1

[node name="LeftButton" type="TextureButton" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/ArrowButtonsHBox"]
margin_left = 40.0
margin_right = 140.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )

[node name="RightButton" type="TextureButton" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/ArrowButtonsHBox"]
margin_left = 144.0
margin_right = 244.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 10 )

[node name="StartMenuBackButton" type="Button" parent="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu"]
margin_top = 677.0
margin_right = 285.0
margin_bottom = 754.0
text = "Back"

[node name="OptionsMenuVBox" type="VBoxContainer" parent="MainMenuControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuHBox" type="HBoxContainer" parent="MainMenuControl/OptionsMenuVBox"]
margin_right = 600.0
margin_bottom = 892.0
alignment = 1

[node name="OptionsMenu" type="VBoxContainer" parent="MainMenuControl/OptionsMenuVBox/MenuHBox"]
margin_left = 138.0
margin_right = 461.0
margin_bottom = 892.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_right = 323.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 113 )

[node name="Title" type="Label" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_top = 117.0
margin_right = 323.0
margin_bottom = 295.0
text = "Options
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_top = 299.0
margin_right = 323.0
margin_bottom = 399.0

[node name="MusicButton" type="Button" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu/HBoxContainer"]
margin_right = 219.0
margin_bottom = 100.0
toggle_mode = true
text = "Music"

[node name="Icon" type="TextureRect" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu/HBoxContainer"]
margin_left = 223.0
margin_right = 323.0
margin_bottom = 100.0
texture = ExtResource( 11 )

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_top = 403.0
margin_right = 323.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 113 )

[node name="MarginContainer3" type="MarginContainer" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_top = 520.0
margin_right = 323.0
margin_bottom = 811.0
rect_min_size = Vector2( 0, 291 )

[node name="OptionsBackToMenuButton" type="Button" parent="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu"]
margin_top = 815.0
margin_right = 323.0
margin_bottom = 892.0
text = "Back"

[connection signal="pressed" from="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu/OptinsButton" to="." method="_on_OptinsButton_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuVBox/MenuHBox/MainMenu/Exit Game" to="." method="_on_Exit_Game_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/LevelSelectionButton" to="." method="_on_LevelSelectionButton_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/LevelSelectionButton2" to="." method="_on_LevelSelectionButton2_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/LevelSelectionButton3" to="." method="_on_LevelSelectionButton3_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/ArrowButtonsHBox/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/ArrowButtonsHBox/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="MainMenuControl/StartGameMenuVBox/StartGameMenuHBox/StartGameMenu/StartMenuBackButton" to="." method="_on_StartMenuBackButton_pressed"]
[connection signal="toggled" from="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu/HBoxContainer/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="MainMenuControl/OptionsMenuVBox/MenuHBox/OptionsMenu/OptionsBackToMenuButton" to="." method="_on_OptionsBackToMenuButton_pressed"]
